# ads-mcp-agent-local

./: .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT_HANDOFF_MANIFEST.md  DEPLOYMENT.md  HANDOFF_REPORT.md  HANDOFF_WRITE_FLOW_0.2.0.md  README.md  USAGE.md  pyproject.toml
.codex/skills/changelog-maintainer/: SKILL.md
.codex/skills/readme-maintainer/: SKILL.md
.codex/skills/usage-maintainer/: SKILL.md
.codex/skills/work-history-maintainer/: SKILL.md
ads_mcp_agent_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agent/: conversation.py  models.py  orchestrator.py  prompts.py  teaching.py  tool_executor.py  tool_registry.py
cli/: main.py
config/: defaults.py  settings.py
docs/: architecture.md  cli-usage.md  code-flow.md  failure-modes.md  learning-rules.md  llm-layer.md  mcp-bridge-layer.md  qa-guide.md  testing-strategy.md
docs/history/: session-log.md
llm/: client.py  openai_compat.py  schemas.py
mcp_bridge/: ads_tools.py  client.py  transport.py
scripts/: feature_smoke_test.py
tests/: conftest.py
tests/fixtures/: fake_mcp_client.py  fake_model_responses.py  sample_configs.py
tests/integration/: test_agent_tool_loop.py  test_openai_compat_contract.py  test_orchestrator_fallbacks.py  test_read_memory_flow.py  test_read_tag_flow.py  test_tool_error_flow.py  test_write_flow.py
tests/unit/: test_ads_tools.py  test_cli_main.py  test_conversation.py  test_feature_smoke_test.py  test_llm_client.py  test_prompt_rules.py  test_settings.py  test_teaching.py  test_tool_executor.py  test_tool_registry.py
(+4 files in other folders)
